--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             <a href="#about">About</a>
           </li>
           <li>
-            <a href="#services">What We Do</a>
+            <a href="#service">What We Do</a>
           </li>
           <li>
             <a href="#news">News</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a href="#contact">Contacts</a>
           </li>
           <li>
             <button type="button" class="subscribe-btn">Subscribe</button>
@@ -96,7 +96,7 @@
       </div>
       <!-------------------END HERO SECTION------------------->
       <!--------------------WHAT WE DO-------------------------->
-      <section id="services">
+      <section id="about">
       <div class="container container-container">
         <p id="what-we-offer">ABOUT US</p>
         <h2 class="what-we-offer-h2">We offer the best product solutions</h2>
@@ -145,9 +145,9 @@
     </section>
       <!--------------------END WHAT WE DO---------------------->
       <!-------------------HOW ARE WE DOING IT------------------->
-      <section id="#news">
-        <div class="container">
-          <p id="news" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1000">HOW ARE WE DOING IT</p>
+      <section id="service">
+        <div class="container container-service">
+          <p data-aos="fade-right" data-aos-delay="500" data-aos-duration="1000">HOW ARE WE DOING IT</p>
           <div class="row">
             <div class="col-6 col-12 px-right" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1000">
               <div class="col-items-1">
@@ -182,6 +182,7 @@
       </section> 
       <!--------------- END OFHOW ARE WE DOING IT----------------->
       <!---------------------OUR CLIENTS---------------------->
+      
       <div class="container container-clients">
         <div class="row">
           <div class="col-6 col-12-1" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000">
@@ -201,30 +202,38 @@
       </div>
       <!-------------------END OFOUR CLIENTS-------------------->
       <!-----------------------ABOUT US------------------------->
-      <div class="container container-about">
-        <p>ABOUT US</p>
-        <h2>We offer the best product solutions</h2>
-        <p class="about-p">You offer a good product, make advertising, analyze the market but
-          still have no improvements. Our qualificated Specialist are ready to
-          solve of your problems. We work with the newest technique and create
-          strategist to catch more customer for you.</p>
-      </div>
+      <section id="news">
+        <div class="container container-about">
+          <p>ABOUT US</p>
+          <h2>Acclaimed as a Trailblazer in Digital Marketing, Delivering Exceptional Results for Clients</h2>
+          <p class="about-p">The success stories of doogital.io's clients speak volumes about their expertise. For instance, a regional retailer partnered with doogital.io to boost their online sales. Through a targeted SEO campaign, the retailer witnessed a remarkable 150% increase in organic website traffic within just three months. This surge in traffic translated into a significant boost in sales and revenue, establishing the retailer as a dominant player in their market.</p>
+          <p class="about-p">What sets doogital.io apart is their unwavering commitment to client success. The company takes the time to understand each client's unique goals and target audience, crafting personalized strategies that align with their specific needs. By fostering transparent communication and providing regular updates, doogital.io builds strong partnerships with clients based on trust, collaboration, and shared success.</p>
+        </div>
+     </section>
       <!---------------------- END OFABOUT US------------------->
 
       
     </main>
      <!----------------------END OF MAIN------------------------> 
      <!-------------------------FOOTER-------------------------->
-     <footer>
+     <footer id="contact">
       <div class="container container-footer" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">
         <div class="row">
-          <div class="col-4 footer-util">
+          <div class="col-4 footer-util col-footer-sm">
             <h3>Doogital<span>.io</span></h3>
             <p>JI Jendral Sudirma, suite 244</p>
             <p>Jakarta, Indonesia</p>
             <p class="footer-email">Doogital@gmail.com</p>
-            <p class="footer-tel">021 108700</p>
-            <p class="footer-copy">&copy; 2020 PodPayment. All rights reserved</p>
+            <p class="footer-tel">(021) 108700</p>
+            <div class="icons">
+              <ul>
+                <li><a href=""></a><i class="fa-brands fa-square-facebook" style="color: #fb7161;"></i></li>
+                <li><a href=""></a><i class="fa-brands fa-square-twitter" style="color: #fb7161;"></i></li>
+                <li><a href=""></a><i class="fa-brands fa-linkedin" style="color: #fb7161;"></i></li>
+                <li><a href=""></a><i class="fa-brands fa-square-instagram" style="color: #fb7161;"></i></li>
+              </ul>
+            </div>
+            <p class="footer-copy">&copy; 2023 PodPayment. All rights reserved</p>
           </div>
           <div class="col-4 footer-util-2">
             <p class="footer-util-2-headertext">What we do</p>
